--- a/details.html
+++ b/details.html
@@ -24,7 +24,7 @@
 
         <section>
             <h2>Stake Pool Hardware</h2>
-            <p2>
+            <p>
             <strong>Server 1</strong><br>
                 HP Z440<br>
                 Intel XEON E5-2660 v4<br>
@@ -42,7 +42,7 @@
                 Option for adding more storage space for Iagon and partner chains<br>
                 <br>
                 <strong>Network</strong><br>
-                Bussiness fibre Internet</p2>
+                Bussiness fibre Internet</p>
         </section>
         <br><br>
         <section>
