--- a/details.html
+++ b/details.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About The Dutch Stake Pool</title>
     <link rel="stylesheet" href="styles.css">
+
+    <!-- Security Policy -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https://*; script-src 'self'; style-src 'self'; connect-src https://api.coingecko.com; frame-src 'self'; form-action 'self'">
+
 </head>
 <body>
     <main class="container">
@@ -53,7 +57,7 @@
         </section>
         <div class="links">
             <!-- Back to o the home page -->
-            <a href="index.html" target="_blank" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
+            <a href="index.html" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
             <img src="tdsp_logo4.webp" alt="Join The Iagon Node"></a>
         </div>
     </main>
