--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <main class="container" id="main-content">
         <h1>Welcome To The Dutch Stake Pool</h1>
         <a href="details.html" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
-        <img src="tdsp_logo4.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool" onclick="goToDetails()">
+        <img src="tdsp_logo4.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool">
         </a>
         <p>Dutch Bare-Metal, low-fee stake pool. The one-stop shop for staking $ADA and $IAG. If you're looking for a DRep, click on the ADA logo below.</p>
 
