--- a/details.html
+++ b/details.html
@@ -60,6 +60,9 @@
             <a href="index.html" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
             <img src="tdsp_logo4.webp" alt="Join The Iagon Node"></a>
         </div>
+        <footer">
+            &copy; 2025 The Dutch Stake Pool. All rights reserved.
+        </footer>
     </main>
 </body>
 </html>
