--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         </a>
                     </td>
                     <td>
-                        <a href="https://app.iagon.com/" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
+                        <a href="https://app.iagon.com/" target="_blank" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
                             <img src="iagonLogoLight2.webp" alt="Join The Iagon Node">
                         </a>
                     </td>
