--- a/details.html
+++ b/details.html
@@ -51,8 +51,8 @@
         <br><br>
         <section>
             <h2>Other Staking Options</h2>
-            <p>When Iagon activates parner staking you can stake your Iagon token to my Iagon node. I will do a 25/75 to 30/70 split.<br>
-            I will also be a partner Chain Node/Stake Pool.
+            <p>When Iagon activates parner staking you can stake your Iagon tokens to this pool with a 25/75 to 30/70 profit split.<br>
+            This pool will also run partner Chain Nodes.
             </p>
         </section>
         <div class="links">
