--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         </a>
                     </td>
                     <td>
-                        <a href="https://pool.pm/b4099d09df1748b807ed9a3112eb5d978a2b499bb12c46f14b3749ea" target="_blank" rel="noopener noreferrer" aria-label="Join The Dutch Stake Pool">
+                        <a href="https://tool.jamonbread.io/delegate/pool1ksye6zwlzaytspldngc3966aj79zkjvmkykydu2txay75c0krfp" target="_blank" rel="noopener noreferrer" aria-label="Join The Dutch Stake Pool">
                             <img src="stakebutton_ico.webp" alt="Join The Dutch Stake Pool - Stake with us">
                         </a>
                     </td>
