--- a/details.html
+++ b/details.html
@@ -46,7 +46,7 @@
                 Option for adding more storage space for Iagon and partner chains<br>
                 <br>
                 <strong>Network</strong><br>
-                Bussiness fibre Internet</p>
+                Business Optic fiber Internet</p>
         </section>
         <br><br>
         <section>
