--- a/details.html
+++ b/details.html
@@ -17,7 +17,7 @@
 
         <section>
             <h2>Stake Pool Operator</h2>
-            <p>My name is Damion Seedorf, and I hold a Bachelor's degree in Information Technology. With 19 years of experience as an IT consultant, I have specialized as a DevOps engineer, focusing on building and maintaining robust IT infrastructures.
+            <p>With 19 years of experience as an IT consultant, I have specialized as a DevOps engineer, focusing on building and maintaining robust IT infrastructures.
 
                 In the blockchain space, I bring extensive experience, having successfully managed a mining farm with 22 GPUs dedicated to Ethereum mining. This hands-on expertise in resource management, hardware optimization, and blockchain technology positions me well for operating a stake pool.
                 
