--- a/details.html
+++ b/details.html
@@ -58,7 +58,7 @@
         <div class="links">
             <!-- Back to o the home page -->
             <a href="index.html" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
-            <img src="tdsp_logo4.webp" alt="Join The Iagon Node"></a>
+            <img src="tdsp_logo.webp" alt="Join The Iagon Node"></a>
         </div>
         <footer">
             &copy; 2025 The Dutch Stake Pool. All rights reserved.
