--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="The Dutch Stake Pool | Reliable Cardano Staking">
     <meta property="og:description" content="Join our Dutch Bare-Metal, low-fee stake pool for $ADA and $IAG. Discover a reliable DRep today.">
-    <meta property="og:image" content="tdsp_logo4.webp">
+    <meta property="og:image" content="tdsp_logo.webp">
     <meta property="og:url" content="https://www.thedutchstakepool.com">
     <meta property="og:type" content="website">
 
@@ -26,15 +26,15 @@
     <!-- Security Policy -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https://*; script-src 'self'; style-src 'self'; connect-src https://api.coingecko.com; frame-src 'self'; form-action 'self'">
 
-    <link rel="icon" sizes="192x192" href="tdsp_logo4_ico.webp">
-    <link rel="apple-touch-icon" href="tdsp_logo4_ico.webp">
+    <link rel="icon" sizes="192x192" href="tdsp_logo_ico.webp">
+    <link rel="apple-touch-icon" href="tdsp_logo_ico.webp">
     <link rel="manifest" href="manifest.json">
 
     <title>The Dutch Stake Pool | Reliable Cardano Staking</title>
-    <link rel="icon" href="tdsp_logo4_ico.webp" type="image/webp">
+    <link rel="icon" href="tdsp_logo_ico.webp" type="image/webp">
 
     <!-- Preload Main Logo -->
-    <link rel="preload" href="tdsp_logo4.webp" as="image">
+    <link rel="preload" href="tdsp_logo.webp" as="image">
     <link rel="stylesheet" href="styles.css">
 
     <script src="scripts.js" defer></script>
@@ -43,7 +43,7 @@
     <main class="container" id="main-content">
         <h1>Welcome To The Dutch Stake Pool</h1>
         <a href="details.html" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
-        <img src="tdsp_logo4.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool">
+        <img src="tdsp_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool">
         </a>
         <p>Dutch Bare-Metal, low-fee stake pool. The one-stop shop for staking $ADA and $IAG. If you're looking for a DRep, click on the ADA logo below.</p>
 
