--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     </td>
                     <td>
                         <a href="https://app.iagon.com/" target="_blank" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
-                            <img src="iagonLogoLight2.webp" alt="Join The Iagon Node">
+                            <img src="iagonLogoLight.webp" alt="Join The Iagon Node">
                         </a>
                     </td>
                 </tr>
