--- a/test2.html
+++ b/test2.html
@@ -41,6 +41,9 @@
 </head>
 <body>
     <main class="container" id="main-content">
+        <iframe style="width:100%;height:60px" frameborder="0" 
+            src="https://img.cexplorer.io/w/widget-wide.html?pool=pool1ksye6zwlzaytspldngc3966aj79zkjvmkykydu2txay75c0krfp&theme=light">
+        </iframe>
         <h1>Welcome To The Dutch Stake Pool</h1>
         <a href="details.html" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
         <img src="tdsp_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool">
@@ -62,7 +65,7 @@
                     </td>
                     <td>
                         <a href="https://gov.tools/connected/drep_directory/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl" target="_blank" rel="noopener noreferrer" aria-label="View The Dutch Stake Pool's DRep ID">
-                            <img src="govtools.webp" alt="View The Dutch Stake Pool's DRep ID">
+                            <img src="cardano_logo_ico.webp" alt="View The Dutch Stake Pool's DRep ID">
                         </a>
                     </td>
                     <td>
