--- a/test2.html
+++ b/test2.html
@@ -1,88 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="Dutch Bare-Metal, low-fee stake pool for Staking $ADA and $IAG. Find a reliable DRep here.">
-    <meta name="keywords" content="Cardano, ADA, IAG, staking, DRep, Dutch stake pool">
-    <meta name="author" content="The Dutch Stake Pool">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Display JSON in Table</title>
 
-    <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="The Dutch Stake Pool | Reliable Cardano Staking">
-    <meta property="og:description" content="Join our Dutch Bare-Metal, low-fee stake pool for $ADA and $IAG. Discover a reliable DRep today.">
-    <meta property="og:image" content="tdsp_logo.webp">
-    <meta property="og:url" content="https://www.thedutchstakepool.com">
-    <meta property="og:type" content="website">
+  <!-- ✅ Generate Secure Nonce for CSP -->
+  <?php
+    $nonce = base64_encode(random_bytes(16)); // Generate a secure nonce for CSP
+    header("Content-Security-Policy: 
+      default-src 'self'; 
+      script-src 'self' https://js.cexplorer.io 'nonce-$nonce'; 
+      connect-src 'self' https://js.cexplorer.io; 
+      img-src 'self' data: https://cexplorer.io https://js.cexplorer.io; 
+      style-src 'self' 'nonce-$nonce' https://js.cexplorer.io;
+      frame-src 'self'
+    ");
+  ?>
 
-    <!-- Web App Meta Tags -->
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="The Dutch Stake Pool">
-    <meta name="apple-mobile-web-app-title" content="The Dutch Stake Pool">
-    <meta name="theme-color" content="#b0adad">
-    <meta name="msapplication-navbutton-color" content="#b0adad">
-    <meta name="apple-mobile-web-app-status-bar-style" content="default">
-
-    <!-- Security Policy -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https://*; script-src 'self'; style-src 'self'; connect-src https://api.coingecko.com; frame-src 'self'; form-action 'self'">
-
-    <link rel="icon" sizes="192x192" href="tdsp_logo_ico.webp">
-    <link rel="apple-touch-icon" href="tdsp_logo_ico.webp">
-    <link rel="manifest" href="manifest.json">
-
-    <title>The Dutch Stake Pool | Reliable Cardano Staking</title>
-    <link rel="icon" href="tdsp_logo_ico.webp" type="image/webp">
-
-    <!-- Preload Main Logo -->
-    <link rel="preload" href="tdsp_logo.webp" as="image">
-    <link rel="stylesheet" href="styles.css">
-
-    <script src="scripts.js" defer></script>
+  <link rel="stylesheet" href="table.css">
+  <link rel="icon" type="image/webp" sizes="192x192" href="tdsp_logo_ico.webp">
 </head>
 <body>
-    <main class="container" id="main-content">
-        <iframe style="width:100%;height:60px" frameborder="0" 
-            src="https://img.cexplorer.io/w/widget-wide.html?pool=pool1ksye6zwlzaytspldngc3966aj79zkjvmkykydu2txay75c0krfp&theme=light">
-        </iframe>
-        <h1>Welcome To The Dutch Stake Pool</h1>
-        <a href="details.html" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
-        <img src="tdsp_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool">
-        </a>
-        <p>Dutch Bare-Metal, low-fee stake pool. The one-stop shop for staking $ADA and $IAG. If you're looking for a DRep, click on the ADA logo below.</p>
+  <h2>JSON Data in Table</h2>
+  <table id="data-table">
+    <thead>
+      <tr>
+        <th>Key</th>
+        <th>Value</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- Table rows will be inserted here -->
+    </tbody>
+  </table>
 
-        <div class="links">
-            <table>
-                <tr>
-                    <td>
-                        <a href="https://twitter.com/DamionDutch" target="_blank" rel="noopener noreferrer" aria-label="Follow The Dutch Stake Pool on Twitter">
-                            <img src="X-logo_ico.webp" alt="Follow The Dutch Stake Pool on Twitter">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="https://tool.jamonbread.io/delegate/pool1ksye6zwlzaytspldngc3966aj79zkjvmkykydu2txay75c0krfp" target="_blank" rel="noopener noreferrer" aria-label="Join The Dutch Stake Pool">
-                            <img src="stakebutton_ico.webp" alt="Join The Dutch Stake Pool - Stake with us">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="https://gov.tools/connected/drep_directory/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl" target="_blank" rel="noopener noreferrer" aria-label="View The Dutch Stake Pool's DRep ID">
-                            <img src="cardano_logo_ico.webp" alt="View The Dutch Stake Pool's DRep ID">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="https://app.iagon.com/" target="_blank" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
-                            <img src="iagonLogoLight.webp" alt="Join The Iagon Node">
-                        </a>
-                    </td>
-                </tr>
-            </table>
-        </div>
-        <div class="prices">
-            <p><strong>ADA:</strong> <span id="ada-price">Loading...</span>      <strong>IAG:</strong> <span id="iag-price">Loading...</span>
-            </p>
-        </div>
-        <footer">
-            &copy; 2025 The Dutch Stake Pool. All rights reserved.
-        </footer>
-    </main>
+  <!-- Attribution -->
+  <p class="attribution">
+    Source: <a href="https://cexplorer.io" target="_blank">Cexplorer.io</a><br>
+    Disclaimer: <a href="https://cexplorer.io/disclaimer" target="_blank">Cexplorer.io Disclaimer</a>
+  </p>
+
+  <!-- ✅ External JavaScript with Matching Nonce -->
+  <script src="script.js" nonce="<?php echo $nonce; ?>"></script>
 </body>
 </html>
