--- a/poolstats.html
+++ b/poolstats.html
@@ -18,29 +18,22 @@
     ");
   ?>
 
-  <link rel="stylesheet" href="table.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/webp" sizes="192x192" href="tdsp_logo_ico.webp">
 </head>
 <body>
-  <h2>JSON Data in Table</h2>
+  <h2></h2>
   <table id="data-table">
-    <thead>
+    <th>
       <tr>
-        <th>Key</th>
-        <th>Value</th>
       </tr>
-    </thead>
-    <tbody>
-      <!-- Table rows will be inserted here -->
-    </tbody>
+     
+    </th>
+    <th>
+        <tr>
+        </tr>
+      </th>
   </table>
-
-  <!-- Attribution -->
-  <p class="attribution">
-    Source: <a href="https://cexplorer.io" target="_blank">Cexplorer.io</a><br>
-    Disclaimer: <a href="https://cexplorer.io/disclaimer" target="_blank">Cexplorer.io Disclaimer</a>
-  </p>
-
   <!-- ✅ External JavaScript with Matching Nonce -->
   <script src="script.js" nonce="<?php echo $nonce; ?>"></script>
 </body>
