--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
                             <img src="iagonLogoLight.webp" alt="Join The Iagon Node">
                         </a>
                     </td>
+                    <td>
+                        <a href="poolstats.html" target="_blank" rel="noopener noreferrer" aria-label="Stake Pool Stats">
+
+                        </a>
+                    </td>
                 </tr>
             </table>
         </div>
