add poolstats page

--- a/about.html
+++ b/about.html
@@ -57,8 +57,8 @@
         </section>
         <div class="links">
             <!-- Back to o the home page -->
-            <a href="index.html" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
-            <img src="tdsp_logo.webp" alt="Join The Iagon Node"></a>
+            <a href="index.html" rel="noopener noreferrer" aria-label="Home">
+            <img src="tdsp_logo.webp" alt="Home"></a>
         </div>
         <footer">
             &copy; 2025 The Dutch Stake Pool. All rights reserved.
