--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
     <main class="container" id="main-content">
         <h1>Welcome To The Dutch Stake Pool</h1>
-        <a href="details.html" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
+        <a href="about.html" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - About">
         <img src="tdsp_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool">
         </a>
         <p>Dutch Bare-Metal, low-fee stake pool. The one-stop shop for staking $ADA and $IAG. If you're looking for a DRep, click on the ADA logo below.</p>
@@ -56,12 +56,12 @@
                         </a>
                     </td>
                     <td>
-                        <a href="https://tool.jamonbread.io/delegate/pool1ksye6zwlzaytspldngc3966aj79zkjvmkykydu2txay75c0krfp" target="_blank" rel="noopener noreferrer" aria-label="Join The Dutch Stake Pool">
+                        <a href="https://tool.jamonbread.io/delegate/pool1ksye6zwlzaytspldngc3966aj79zkjvmkykydu2txay75c0krfp" target="_blank" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - Join">
                             <img src="stakebutton_ico.webp" alt="Join The Dutch Stake Pool - Stake with us">
                         </a>
                     </td>
                     <td>
-                        <a href="https://gov.tools/connected/drep_directory/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl" target="_blank" rel="noopener noreferrer" aria-label="View The Dutch Stake Pool's DRep ID">
+                        <a href="https://gov.tools/connected/drep_directory/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl" target="_blank" rel="noopener noreferrer" aria-label="DamionDutch Stake DRep ID">
                             <img src="govtools.webp" alt="View The Dutch Stake Pool's DRep ID">
                         </a>
                     </td>
@@ -71,8 +71,8 @@
                         </a>
                     </td>
                     <td>
-                        <a href="poolstats.html" target="_blank" rel="noopener noreferrer" aria-label="Stake Pool Stats">
-
+                        <a href="poolstats.html" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - Stats">
+                            <img src="stats_ico.webp" alt="The Dutch Stake Pool - Statistics">
                         </a>
                     </td>
                 </tr>
