--- a/poolstats.html
+++ b/poolstats.html
@@ -22,19 +22,29 @@
   <link rel="icon" type="image/webp" sizes="192x192" href="tdsp_logo_ico.webp">
 </head>
 <body>
-  <h2></h2>
-  <table id="data-table">
-    <th>
-      <tr>
-      </tr>
-     
-    </th>
-    <th>
+  <main class="container" id="main-content">
+    <h2></h2>
+    <table id="data-table">
+      <th>
         <tr>
         </tr>
+      
       </th>
-  </table>
-  <!-- ✅ External JavaScript with Matching Nonce -->
-  <script src="script.js" nonce="<?php echo $nonce; ?>"></script>
+      <th>
+          <tr>
+          </tr>
+        </th>
+    </table>
+    <!-- ✅ External JavaScript with Matching Nonce -->
+    <script src="script.js" nonce="<?php echo $nonce; ?>"></script>
+    <div class="links">
+      <!-- Back to o the home page -->
+      <a href="index.html" rel="noopener noreferrer" aria-label="Home">
+      <img src="tdsp_logo.webp" alt="Home"></a>
+  </div>
+  <footer">
+      &copy; 2025 The Dutch Stake Pool. All rights reserved.
+  </footer>
+  </main>
 </body>
 </html>
