--- a/index.html
+++ b/index.html
@@ -51,13 +51,22 @@
             <table>
                 <tr>
                     <td>
-                        <a href="https://twitter.com/DamionDutch" target="_blank" rel="noopener noreferrer" aria-label="Follow The Dutch Stake Pool on Twitter">
-                            <img src="X-logo_ico.webp" alt="Follow The Dutch Stake Pool on Twitter">
+                        <a href="about.html" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - About">
+                            <img src="tdsp_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool">
+                    </td>
+                    <td>
+                        <a href="poolstats.html" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - Stats">
+                            <img src="stats_ico.webp" alt="The Dutch Stake Pool - Statistics">
                         </a>
                     </td>
                     <td>
                         <a href="https://tool.jamonbread.io/delegate/pool1ksye6zwlzaytspldngc3966aj79zkjvmkykydu2txay75c0krfp" target="_blank" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - Join">
                             <img src="stakebutton_ico.webp" alt="Join The Dutch Stake Pool - Stake with us">
+                        </a>
+                    </td>
+                    <td>
+                        <a href="https://twitter.com/DamionDutch" target="_blank" rel="noopener noreferrer" aria-label="Follow The Dutch Stake Pool on Twitter">
+                            <img src="X-logo_ico.webp" alt="Follow The Dutch Stake Pool on Twitter">
                         </a>
                     </td>
                     <td>
@@ -68,11 +77,6 @@
                     <td>
                         <a href="https://app.iagon.com/" target="_blank" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
                             <img src="iagonLogoLight.webp" alt="Join The Iagon Node">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="poolstats.html" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - Stats">
-                            <img src="stats_ico.webp" alt="The Dutch Stake Pool - Statistics">
                         </a>
                     </td>
                 </tr>
