--- a/poolstats.html
+++ b/poolstats.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Display JSON in Table</title>
+  <title>The Dutch Stake Pool | Stats</title>
 
   <!-- ✅ Generate Secure Nonce for CSP -->
   <?php
@@ -28,23 +28,44 @@
       <th>
         <tr>
         </tr>
-      
       </th>
-      <th>
-          <tr>
-          </tr>
-        </th>
     </table>
-    <!-- ✅ External JavaScript with Matching Nonce -->
     <script src="script.js" nonce="<?php echo $nonce; ?>"></script>
     <div class="links">
-      <!-- Back to o the home page -->
-      <a href="index.html" rel="noopener noreferrer" aria-label="Home">
-      <img src="tdsp_logo.webp" alt="Home"></a>
+      <table>
+          <tr>
+              <td>
+                <a href="index.html" rel="noopener noreferrer" aria-label="Home">
+                    <img src="tdsp_logo.webp" alt="Home"></a>
+                </a>
+              </td>
+              <td>
+                <a href="https://tool.jamonbread.io/delegate/pool1ksye6zwlzaytspldngc3966aj79zkjvmkykydu2txay75c0krfp" target="_blank" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - Join">
+                    <img src="stakebutton_ico.webp" alt="Join The Dutch Stake Pool - Stake with us">
+                </a>
+            </td>
+              <td>
+                  <a href="https://twitter.com/DamionDutch" target="_blank" rel="noopener noreferrer" aria-label="Follow The Dutch Stake Pool on Twitter">
+                      <img src="X-logo_ico.webp" alt="Follow The Dutch Stake Pool on Twitter">
+                  </a>
+              </td>
+              <td>
+                  <a href="https://gov.tools/connected/drep_directory/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl" target="_blank" rel="noopener noreferrer" aria-label="DamionDutch Stake DRep ID">
+                      <img src="govtools.webp" alt="View The Dutch Stake Pool's DRep ID">
+                  </a>
+              </td>
+              <td>
+                  <a href="https://app.iagon.com/" target="_blank" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
+                      <img src="iagonLogoLight.webp" alt="Join The Iagon Node">
+                  </a>
+              </td>
+          </tr>
+      </table>
   </div>
   <footer">
       &copy; 2025 The Dutch Stake Pool. All rights reserved.
   </footer>
+</main>
   </main>
 </body>
 </html>
