--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </table>
         </div>
         <div class="prices">
-            <p><strong>ADA:</strong> <span id="ada-price">Loading...</span>      <strong>IAG:</strong> <span id="iag-price">Loading...</span>
+            <p><strong>ADA:</strong> <span id="ada-price">Loading...</span> <strong>IAG:</strong> <span id="iag-price">Loading...</span> <strong>STRCH:</strong> <span id="strch-price">Loading...</span>
             </p>
         </div>
         <footer">
