--- a/poolstats.html
+++ b/poolstats.html
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Dutch Stake Pool | Stats</title>
-
-  <!-- ✅ Generate Secure Nonce for CSP -->
   <?php
     $nonce = base64_encode(random_bytes(16)); // Generate a secure nonce for CSP
     header("Content-Security-Policy: 
@@ -17,19 +9,28 @@
       frame-src 'self'
     ");
   ?>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>The Dutch Stake Pool | Stats</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/webp" sizes="192x192" href="tdsp_logo_ico.webp">
 </head>
 <body>
-  <main class="container" id="main-content">
-    <h2></h2>
-    <table id="data-table">
-      <th>
-        <tr>
-        </tr>
-      </th>
-    </table>
+  <main class="container">
+    <h1>Pool Stats</h1>
+    <section>
+      <center>
+      <table id="data-table">
+        <th>
+          <tr>
+          </tr>
+        </th>
+      </table>
+      </center>
+    </section>
     <script src="script.js" nonce="<?php echo $nonce; ?>"></script>
     <div class="links">
       <table>
