Add starch miner page

--- a/poolstats.html
+++ b/poolstats.html
@@ -60,6 +60,11 @@
                       <img src="iagonLogoLight.webp" alt="Join The Iagon Node">
                   </a>
               </td>
+              <td>
+                <a href="strch.html" rel="noopener noreferrer" aria-label="Starch Miner Company Stats">
+                    <img src="starchCompanyLogo.webp" alt="Join TDSP Starch Company">
+                </a>
+            </td>
           </tr>
       </table>
   </div>
