--- a/strch.html
+++ b/strch.html
@@ -37,6 +37,7 @@ header("Content-Security-Policy:
             
             
             <div class="refresh-time">Last Updated: <span id="last-updated">Never</span></div>
+            <div>Source <a href="https://starch.one" target="_blank" rel="noopener noreferrer" aria-label="Starch.one">http://starch.one</a></div>
             <br>
         </section>
         <div class="links">
